<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/urls_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/urls_header"
                android:textAlignment="center"
                android:textColor="#4a4a4a"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/urlLinerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_button_off"
                android:padding="12dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/connectionTypeHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/url_address_name"
                            android:textSize="18sp"
                            android:textColor="#4a4a4a"/>

                        <TextView
                            android:id="@+id/connectionURL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/url_address"
                            android:layout_marginLeft="10dp"
                            android:textSize="18sp"
                            android:textColor="#5BA4ED"/>

                    </LinearLayout>


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/portraitId"
                            android:layout_margin="-10dp"
                            android:padding="-20dp"
                            android:text="@string/portrait"
                            android:checked="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:id="@+id/landscapeId"
                            android:layout_margin="-10dp"
                            android:padding="-20dp"
                            android:text="@string/landscape"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>
            <ToggleButton
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_button_off"
                android:textOff="@string/button_start"
                android:textOn="@string/button_stop"
                android:textColor="#4a4a4a" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>